# Qt-Calculators

./: CMakeLists.txt  LICENSE  README.md  application.cpp  application.hpp  calculators.cpp  calculators.hpp  main.cpp  presenter.cpp  presenter.hpp
resources/: styles.qss
